--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "description": "",
   "license": "GPL-2.0-or-later",
   "require": {
-    "typo3/cms-core": ">=10.0 <11.99"
+    "typo3/cms-core": ">=10.0 <11.99",
+    "phpoffice/phpspreadsheet": "1.*"
   },
   "extra": {
     "typo3/cms": {
