--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,20 @@
   "name": "hyperdigital/hd_translator",
   "type": "typo3-cms-extension",
   "description": "Translation of static strings from locallang.xlf files and export/import of database related content",
+  "authors": [
+    {
+      "name": "hyperdigital.de",
+      "email": "developer@hyperdigital.de",
+      "homepage": "https://www.hyperdigital.de/",
+      "role": "Developer"
+    },
+    {
+      "name": "coma.de",
+      "email": "info@coma.de",
+      "homepage": "https://www.coma.de/",
+      "role": "Developer"
+    }
+  ]
   "license": "GPL-2.0-or-later",
   "require": {
     "typo3/cms-core": ">=12.0 <12.99",
